Move stuff out of the root project